Fixed product page spacing

--- a/assets/main.css
+++ b/assets/main.css
@@ -7572,7 +7572,7 @@ td {
     margin-bottom: 5px; }
 
 .flickity-page-dots {
-  bottom: -15px; }
+  bottom: 0px; }
 
 .product_gallery_nav {
   display: none !important; }
